<resources>
    <string name="app_name">chatApp</string>
    <string name="welcome_back">WelCome Back</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">create new Account</string>
    <string name="name">Name</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select user</string>
    <string name="type_a_message">type a message</string>
    <string name="online">Online</string>
    <string name="search_hint">search Hint</string>
    <string name="save">save</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string-array name="country_codes">
        <item>+1 (USA)</item>
        <item>+7 (RUSSIA)</item>
        <item>+20 (EGYPT)</item>
        <item>+44 (UK)</item>
        <item>+84 (VN)</item>
    </string-array>
</resources>